Run sync on build. Bump min plasma to 5.15

--- a/build
+++ b/build
@@ -3,6 +3,7 @@
 
 if [ -d "package/translate" ]; then
 	echo "[build] translate dir found, running merge."
+	(cd package/translate && sh ./sync condensedweather simpleweather)
 	(cd package/translate && sh ./merge && sh ./build)
 	if [ "$(git diff --stat .)" != "" ]; then
 		echo "[build] Changed detected. Cancelling build."
@@ -14,7 +15,7 @@ fi
 plasmoidName=$(kreadconfig5 --file="$PWD/package/metadata.desktop" --group="Desktop Entry" --key="X-KDE-PluginInfo-Name")
 plasmoidName="${plasmoidName##*.}" # Strip namespace (Eg: "org.kde.plasma.")
 plasmoidVersion=$(kreadconfig5 --file="$PWD/package/metadata.desktop" --group="Desktop Entry" --key="X-KDE-PluginInfo-Version")
-filenameTag="-plasma5.12"
+filenameTag="-plasma5.15"
 rm ${plasmoidName}-v*.plasmoid
 cd package
 filename=${plasmoidName}-v${plasmoidVersion}${filenameTag}.plasmoid
