Add comment to metadata

--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Daily Forecast
-Comment=
+Comment=Daily weather forecast icons with min/max temp.
 
 Type=Service
 Icon=weather-clear
